<resources>
    <string name="app_name">P-integrate</string>

    <string name="email_text">Email</string>
    <string name="pref_emil">Preferred email</string>

    <string name="card_number_text">Card Number</string>

    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>


    <string name="exp">Expiry</string>
    <string name="pay">Pay now</string>

    <string name="item_name_text">Item name:</string>
    <string name="item_name">Nigerian-made wrist watch</string>

    <string name="item_amount_text">Amount:</string>
    <string name="item_amount">$2000</string>

    <string name="pay_with_google">Pay with Google</string>

</resources>
