<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:background="#232323"
    tools:context=".GooglePayActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_name_text"
                android:textSize="21sp"
                android:gravity="center"
                android:textColor="@android:color/holo_orange_dark"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/item_name"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@android:color/holo_green_dark"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_amount_text"
                android:textSize="21sp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:textColor="@android:color/holo_orange_dark"
                android:paddingEnd="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/item_amount"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@android:color/holo_green_dark"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/pay_with_google"
            android:background="@android:color/holo_red_dark"
            android:textColor="#ffffff"
            android:id="@+id/pay_button"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>


</LinearLayout>